2007-10-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mjpeg.tcl: Use asynchronous connect to avoid blocking
	when reconnecting the stream (interrupts the audio).

2007-10-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:       Display images from the VCARD if present.
	* tkchat_mjpeg.tcl: Fix namespace of addStatus call.

	* tkchat.tcl:       Reworked the hooks system to include priority
	* tkchat_mjpeg.tcl: and added an options hook to permit plugins to
	* tkchat_mms.tcl:   add a page to the options dialog. All plugins now
	* tkchat_rss.tcl:   use hooks. RSS removed from the main file.
	* tkchat_clock.tcl  Generalized the NOLA plugin into a clock demo.

2007-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add tabs to Options dialog (with suitable non-tile
	fallback). Add save hooks for extensions to use.

2007-09-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:       Ignore groupchat messages with empty bodies 
	* tkchat_mjpeg.tcl: (ie: coccinella whiteboard messages). Remove 
	* tkchat_mms.tcl:   the conference special features/streams.

2007-09-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   Implement the login hooks.
	* tkchat_mjpeg: Add watchdog.

2007-09-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mjpeg:    MJPEG stream handling for the Tcl conference
	
	* tkchat_mms.tcl:  Multimedia stream support with snack.
	* tkchat_nola.tcl: demo plugin (New Orleans clock display)
	* tkchat.tcl:      Extended hooks to be more useful for plugins
	* tkchat_rss.tcl:  Use init hook to initialize.

2007-09-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_rss.tcl:    Fix encoding handling 
	* rssrdr/rssrdr.tcl: handle additiona atom fields.

2007-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_whiteboard.tcl:      Support UseTkOnly flag.

	* jabberlib/wrapper.tcl:      Dealt with an evil bug in the tdom/